src/components/nav.css
.Navbar{
    padding-top: 2.5vh;
    padding-bottom: 2.5vh;
    position: sticky;
    top: 0;
    background-color: white;
    z-index: 10;
    display: flex;
    flex-direction: row;
}


    #about{
        margin-left: 60%;
        margin-right: 5%;
    }

    #work{
        margin-right: 10%;
    }

    .nav-text{
       
    }

    .nav-link{
        text-decoration: none;
        font-weight: 600;
        font-size: 18px;
        color: black;
    }

    #logo-link{
        margin-left: 10%;
    }

    .logo{
        width: 3em;
        height: 2em;
    }

    


@media screen and (max-width: 800px){


    .Navbar{
        z-index: 12;
    }
   

    .nav-text{
        font-size: 14px;
    }

    .logo{
        grid-area: firstC / firstC / firstR / firstR;

    }

    #logo-link{
        margin-left: 2em;
    }

    #about{
        margin-left: 50%;
    }

    
}

